# johnnyd

./: ABOUT.md  CLAUDE.md  COSTS.md  Cargo.toml  README.md  johnny-d-config.json
johnnyd-bin/: Cargo.toml
johnnyd-bin/src/: main.rs
johnnyd-lib/: Cargo.toml
johnnyd-lib/src/: config.rs  config_test.rs  johnny_d.rs  lib.rs
